Added is_first_semester field to timetable. Fixed seed to prevent duplicate entry error. Added enum to request parameters in timetable controller.
